--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="hero"></div>
     <div class="content">
         <div class="content-item">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="seo diagram computer coffee pencils" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="drawing an seo diagram while at a computer with coffee" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
