--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
     <div class="hero"></div>
-    <div class="content">
+    <section class="content">
         <div id="search-engine-optimization" class="content-item">
             <img src="./assets/images/search-engine-optimization.jpg" alt="drawing an seo diagram while at a computer with coffee" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -47,7 +47,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
     <aside class="benefits">
         <div id="lead-generation" class="benefit-item">
             <h3>Lead Generation</h3>
