fixed ul links in nav section

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="file:///Users/lianellewellyn/bootcamp/challenges/html-seo-refactor/index.html#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="file:///Users/lianellewellyn/bootcamp/challenges/html-seo-refactor/index.html#online-reputation-management">Online Reputation Management</a>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="file:///Users/lianellewellyn/bootcamp/challenges/html-seo-refactor/index.html#social-media-marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
